<?xml version="1.0"?>
<package format="2">
  <name>ow_power_system</name>
  <version>0.1.0</version>
  <description>The ow_power_system package. Simulates (or will simulate) the lander's power system, taking in power use and future loading and outputting state of charge and a predicted remaining useful life.</description>

  <license>NASA OPEN SOURCE AGREEMENT VERSION 1.3</license>

  <author email="ussama.naal@nasa.gov">Ussama Naal</author>
  <author email="jason.fugate@nasa.gov">Jason Fugate</author>
  <author email="molly.c.oconnor@nasa.gov">Molly O'Connor</author>
  <author email="chetan.s.kulkarni@nasa.gov">Chetan Kulkarni</author>

  <maintainer email="jason.fugate@nasa.gov">Jason Fugate</maintainer>
  <maintainer email="ussama.naal@nasa.gov">Ussama Naal</maintainer>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>ow_lander</build_depend>  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
