<?xml version="1.0"?>
<package format="2">
  <name>ow_regolith</name>
  <version>0.1.0</version>
  <description>
    <p>A node that listens for an image that indicates deformation of the terrain has occured and
  spawns regolith simulating rigidbodies into the world to simulate the collection of material with a scoop.</p>
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per --> 
  <maintainer email="thomas.stucky@nasa.gov">Thomas Stucky</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>NASA OPEN SOURCE AGREEMENT VERSION 1.3</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="thomas.stucky@nasa.gov">Thomas Stucky</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- <depend>gazebo_ros</depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>ow_dynamic_terrain</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ow_lander</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
