<?xml version="1.0"?>
<package format="2">
  <name>ow_testbed</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ow_testbed</p>
    <p>This package contains configuration data, 3D models and launch files for ow_testbed robot</p>
  </description>

  <author>Antoine Tardy</author>
  <maintainer email="antoine.tardy@nasa.gov" />

  <license>NASA OPEN SOURCE AGREEMENT VERSION 1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
